# nmdc-client

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: deploy_docs.yml  test_and_docs.yml
_modules/: index.html  nmdc_client.html
docs/source/: conf.py  index.rst
nmdc_client/: __init__.py
