# setup.cfg
[metadata]
name = nmdc-client
version = 0.1.0
description = Client for accessing the NMDC data API
author = NMDC Contributors
author_email = jeff.baumes@kitware.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    requests
